remove all the C++ template for microbenchmarks.

--- a/configs/kernels/microbenchmark.cfg
+++ b/configs/kernels/microbenchmark.cfg
@@ -29,33 +29,33 @@ args = [
         "-ratio=32 -type=double"
         ]
 kernels = [
-        "benchmark_func_int",
-        "benchmark_func_int",
-        "benchmark_func_int",
-        "benchmark_func_int",
-        "benchmark_func_int",
-        "benchmark_func_int",
-        "benchmark_func_int",
-        "benchmark_func_int",
-        "benchmark_func_int",
-        "benchmark_func_float",
-        "benchmark_func_float",
-        "benchmark_func_float",
-        "benchmark_func_float",
-        "benchmark_func_float",
-        "benchmark_func_float",
-        "benchmark_func_float",
-        "benchmark_func_float",
-        "benchmark_func_float",
-        "benchmark_func_double",
-        "benchmark_func_double",
-        "benchmark_func_double",
-        "benchmark_func_double",
-        "benchmark_func_double",
-        "benchmark_func_double",
-        "benchmark_func_double",
-        "benchmark_func_double",
-        "benchmark_func_double"
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int"
         ]
 
 [mixbench-cuda-alt]
@@ -120,7 +120,30 @@ args = [
         "-ratio=64 -type=2"
         ]
 kernels = [
-            "benchmark_shmem"
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_two_float",
+        "benchmark_two_float",
+        "benchmark_two_float",
+        "benchmark_two_float",
+        "benchmark_two_float",
+        "benchmark_two_float",
+        "benchmark_two_float",
+        "benchmark_two_float",
+        "benchmark_four_float",
+        "benchmark_four_float",
+        "benchmark_four_float",
+        "benchmark_four_float",
+        "benchmark_four_float",
+        "benchmark_four_float",
+        "benchmark_four_float",
+        "benchmark_four_float"
         ]
 
 [cachebench]
@@ -148,7 +171,27 @@ args = [
         "-type=2 -idxClamp=0 -step=32"
         ]
 kernels = [
-            "benchmark_func"
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int"
         ]
 
 [cachebench-l2-only]
@@ -173,7 +216,24 @@ args = [
         "-type=2 -idxClamp=0 -step=32"
         ]
 kernels = [
-            "benchmark_func"
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int"
         ]
 
 [cachebench-tex-loads]
@@ -201,6 +261,26 @@ args = [
         "-type=2 -idxClamp=0 -step=32"
         ]
 kernels = [
-            "benchmark_func"
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_two_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int",
+        "benchmark_four_int"
         ]
 
