revise the parser accordingly.

--- a/configs/kernels/microbenchmark.cfg
+++ b/configs/kernels/microbenchmark.cfg
@@ -38,24 +38,24 @@ kernels = [
         "benchmark_int",
         "benchmark_int",
         "benchmark_int",
-        "benchmark_two_int",
-        "benchmark_two_int",
-        "benchmark_two_int",
-        "benchmark_two_int",
-        "benchmark_two_int",
-        "benchmark_two_int",
-        "benchmark_two_int",
-        "benchmark_two_int",
-        "benchmark_two_int",
-        "benchmark_four_int",
-        "benchmark_four_int",
-        "benchmark_four_int",
-        "benchmark_four_int",
-        "benchmark_four_int",
-        "benchmark_four_int",
-        "benchmark_four_int",
-        "benchmark_four_int",
-        "benchmark_four_int"
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double"
         ]
 
 [mixbench-cuda-alt]
@@ -89,7 +89,33 @@ args = [
         "-ratio=32 -type=double"
         ]
 kernels = [
-            "benchmark_func"
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_int",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_float",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double",
+        "benchmark_double"
         ]
 
 [shmembench]
