fix some bugs and run real benchmarks for rtx8000.

--- a/src/linux/Makefile
+++ b/src/linux/Makefile
@@ -34,7 +34,7 @@
 ###############################################################################
 
 
-CASES=binomialOptions BlackScholes conjugateGradient convolutionFFT2D convolutionSeparable convolutionTexture eigenvalues fastWalshTransform gaussian histogram hotspot kmeans matrixMul mergeSort nnForward nvml_tools pathfinder quasirandomGenerator reduction scalarProd SobolQRNG sortingNetworks transpose vectorAdd shmembench cachebench cachebench-l2-only cachebench-tex-loads mixbench mixbench-cuda-ro mixbench-cuda-alt
+CASES=binomialOptions BlackScholes conjugateGradient convolutionFFT2D convolutionSeparable convolutionTexture cfd eigenvalues fastWalshTransform gaussian histogram hotspot kmeans matrixMul mergeSort nnForward nvml_tools pathfinder quasirandomGenerator reduction scalarProd SobolQRNG sortingNetworks transpose vectorAdd shmembench cachebench cachebench-l2-only cachebench-tex-loads mixbench mixbench-cuda-ro mixbench-cuda-alt
 
 TARGET_ARCH ?= $(shell uname -m)
 
