--- a/configs/benchmarks/rtx8000-dvfs.cfg
+++ b/configs/benchmarks/rtx8000-dvfs.cfg
@@ -1,11 +1,11 @@
 [device]
 name=rtx8000
 # CUDA API
-cuda_device_id=3
+cuda_device_id=0
 # NvidiaInspector
-nvins_device_id=3
+nvins_device_id=0
 # nvidia-smi
-nvsmi_device_id=3
+nvsmi_device_id=0
 
 [global]
 # running time control to collect long-term info, e.g., power and dcgm
@@ -72,8 +72,8 @@ metrics = [1002, 1003, 1004, 1005, 1006, 1007, 1008]
 [dvfs_control]
 coreBase = 0
 memBase = 0
-coreF = [705, 900, 1110, 1305, 1500, 1710, 1890]
-# the frequency of V100 HBM is fixed
+coreF = [705, 870, 945, 1110, 1215, 1305, 1410, 1500, 1605, 1710]
+# the frequency of RTX 8000 is fixed
 memF = [6500]
 powerState = 0
 # min:100, max:260
